@@ -1,0 +1,17 @@
+# $NetBSD: Makefile,v 1.1.1.1 2007/06/10 13:39:36 abs Exp $
+
+DISTNAME=	SQL-ReservedWords-0.7
+PKGNAME=	p5-${DISTNAME}
+CATEGORIES=	databases perl5
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=SQL/}
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://search.cpan.org/dist/SQL-ReservedWords/
+COMMENT=	Reserved SQL words by standard and vendors
+
+DEPENDS+=	p5-Sub-Exporter-[0-9]*:../../devel/p5-Sub-Exporter
+
+PERL5_PACKLIST=		auto/SQL/ReservedWords/.packlist
+
+.include "../../lang/perl5/module.mk"
+.include "../../mk/bsd.pkg.mk"
