@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1.1.1 2007/06/10 13:39:36 abs Exp $
+
+SHA1 (SQL-ReservedWords-0.7.tar.gz) = 5827f189bd6c5e1db603ea1c86a5f486b369a5b3
+RMD160 (SQL-ReservedWords-0.7.tar.gz) = ed85e4c2f85426ff8d61e530f56881a8f19b8823
+Size (SQL-ReservedWords-0.7.tar.gz) = 19254 bytes
